Fix vertical padding for branding div on mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -298,7 +298,7 @@ ul li {
 
 .site-branding {
   float: left;
-  margin-top: 0;
+  margin-top: 13px;
   margin-left: 10px;
 }
 .site-branding .logo {
